# androidNDKOpencvSupport

./: README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  myapplication.cpp
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
sdk/: native
